display option defaults in help
[#137502797]

--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -96,6 +96,10 @@
     "translation": "   Zulässige Größenbeschränkungen mit 'CF_NAME quotas' anzeigen"
   },
   {
+    "id": " (Default: {{.DefaultValue}})",
+    "translation": " (Default: {{.DefaultValue}})"
+  },
+  {
     "id": " added as '",
     "translation": " hinzugefügt als '"
   },
